--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^11.2.12",
     "graphql": "^16.9.0",
     "html-react-parser": "^5.1.10",
+    "lucide-react": "^0.539.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
