chore(deploy): improve deployment script for cPanel

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,10 +1,12 @@
+---
 deployment:
   tasks:
     - export DEPLOYPATH=/home3/wouessic/public_html
     - /bin/rm -rf $DEPLOYPATH/*
-    - npm ci 
+    - npm ci
     - npm run build
-    - test -d build || (echo "Build failed - no build directory" && exit 1)
+    - ls -la 
+    - ls -la build/
     - /bin/cp -R build/* $DEPLOYPATH/
-    - echo "Deployment complete. Files in public_html:"
+    - echo "Files now in public_html:"
     - ls -la $DEPLOYPATH/
